--- a/index.html
+++ b/index.html
@@ -2,16 +2,80 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Rock Gardens</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
-  <link href="css/type.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700&display=swap" rel="stylesheet">
+
 </head>
 <body>
-<main>
+  <main role="main">
+    <header class="grid push pad-t-1-2 pad-b-2 grid-middle">
 
-</main>
-</body>
-</html>
+      <div class="unit push unit-xs-content-center xs-1-2 unit-offset-xs-1-4  l-1-3 unit-offset-l-0">
+
+          <h1 class="push-none zetta bold">枯山水</h1>
+          <h2 class="mega bold push-none">Rock Gardens</h2>
+
+        </div>
+
+
+        <nav class="unit xs-1 unit-offset-l-1-3 l-1-3 text-center">
+
+          <ol class="list-group-inline">
+            <li><a class="pad-b-1-4 push-r-1-2 mega" href="#">Viewing</a></li>
+            <li><a class="pad-b-1-4 push-r-1-2 mega" href="#">Gravel</a></li>
+            <li><a class="pad-b-1-4 mega" href="#">Symbolism</a></li>
+          </ol>
+        </nav>
+
+        <div class="unit">
+          <img role="presentation" class="img-flex" src="images/banner.svg" alt="">
+        </div>
+
+      </header>
+
+      <article class="grid">
+        <div class="unit xs-1 gutter max-length">
+          <h3 class="push-none text-center exa">自然の親密な本質を模倣し、人生の真の意味を発見する。</h3>
+          <p class="text-center gutter-2">Imitate the intimate essence of nature & discover the true meaning of life.</p>
+        </div>
+      </article>
+
+      <section class="grid push pad-b-2">
+        <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
+          <img class="img-flex" src="images/viewing.svg" alt="Viewing rock gardens">
+          <h4 class="push-none">閲覧</h4>
+          <h5>Viewing</h5>
+          <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the <em>hojo</em></p>
+          <a class="btn btn-ghost" href="#">Learn more about Viewing</a>
+        </div>
+
+        <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
+          <img class="img-flex" src="images/viewing.svg" alt="Gravel rock garden">
+          <h4 class="push-none">閲覧</h4>
+          <h5>Viewing</h5>
+          <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
+          <a class="btn btn-ghost" href="#">Learn more about Gravel</a>
+        </div>
+
+        <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
+          <img class="img-flex" src="images/viewing.svg" alt="Symbolism in a rock garden">
+          <h4 class="push-none">象徴主義</h4>
+          <h5>Symbolism</h5>
+          <p>n the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+          <a class="btn btn-ghost" href="#">Learn more about Symbolism</a>
+        </div>
+      </section>
+
+      <footer>
+        <p>© 794 Heian Period</p>
+      </footer>
+    </main>
+  </body>
+
+  </html>
