--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
   <main role="main">
-    <header class="grid push pad-t-1-2 pad-b-2 grid-middle">
+    <header role="banner" class="grid push pad-t-1-2 pad-b-2 grid-middle">
 
-      <div class="unit push unit-xs-content-center xs-1-2 unit-offset-xs-1-4  l-1-3 unit-offset-l-0">
+      <div class="unit push unit-xs-content-center xs-1  l-1-3 unit-offset-l-0">
 
           <h1 class="push-none zetta bold">枯山水</h1>
           <h2 class="mega bold push-none">Rock Gardens</h2>
@@ -48,7 +48,9 @@
 
       <section class="grid push pad-b-2">
         <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
-          <img class="img-flex" src="images/viewing.svg" alt="Viewing rock gardens">
+          <div class="embed embed-16by9">
+            <img class="embed-item img-flex" src="images/viewing.svg" alt="Viewing rock gardens">
+          </div>
           <h4 class="push-none">閲覧</h4>
           <h5>Viewing</h5>
           <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the <em>hojo</em></p>
@@ -56,18 +58,22 @@
         </div>
 
         <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
-          <img class="img-flex" src="images/viewing.svg" alt="Gravel rock garden">
-          <h4 class="push-none">閲覧</h4>
-          <h5>Viewing</h5>
+          <div class="embed embed-16by9">
+            <img class="embed-item img-flex" src="images/gravel.svg" alt="gravel gardens">
+          </div>
+          <h4 class="push-none">砂利</h4>
+          <h5>Gravel</h5>
           <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
           <a class="btn btn-ghost" href="#">Learn more about Gravel</a>
         </div>
 
         <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
-          <img class="img-flex" src="images/viewing.svg" alt="Symbolism in a rock garden">
+          <div class="embed embed-16by9">
+            <img class="embed-item img-flex" src="images/symbolism.svg" alt="Viewing rock gardens">
+          </div>
           <h4 class="push-none">象徴主義</h4>
           <h5>Symbolism</h5>
-          <p>n the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+          <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
           <a class="btn btn-ghost" href="#">Learn more about Symbolism</a>
         </div>
       </section>
