Change border colour and paragraph text size

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
       </header>
 
-      <article class="grid">
+      <article class="grid push">
         <div class="unit xs-1 gutter max-length">
-          <h3 class="push-none text-center exa">自然の親密な本質を模倣し、人生の真の意味を発見する。</h3>
-          <p class="text-center gutter-2">Imitate the intimate essence of nature & discover the true meaning of life.</p>
+          <h3 class="push text-center yotta not-bold">自然の親密な本質を模倣し、人生の真の意味を発見する。</h3>
+          <p class="text-center gutter-2 mega">Imitate the intimate essence of nature & discover the true meaning of life.</p>
         </div>
       </article>
 
