--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 
       <article class="grid push">
         <div class="unit xs-1 gutter max-length">
-          <h3 class="push text-center yotta not-bold">自然の親密な本質を模倣し、人生の真の意味を発見する。</h3>
+          <h3 class="push-1-2 text-center yotta not-bold">自然の親密な本質を模倣し、人生の真の意味を発見する。</h3>
           <p class="text-center gutter-2 mega">Imitate the intimate essence of nature & discover the true meaning of life.</p>
         </div>
       </article>
 
       <section class="grid push pad-b-2">
         <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
-          <div class="embed embed-16by9">
+          <div class="embed embed-4by3">
             <img class="embed-item img-flex" src="images/viewing.svg" alt="Viewing rock gardens">
           </div>
           <h4 class="push-none">閲覧</h4>
@@ -58,7 +58,7 @@
         </div>
 
         <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
-          <div class="embed embed-16by9">
+          <div class="embed embed-4by3">
             <img class="embed-item img-flex" src="images/gravel.svg" alt="gravel gardens">
           </div>
           <h4 class="push-none">砂利</h4>
@@ -68,7 +68,7 @@
         </div>
 
         <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
-          <div class="embed embed-16by9">
+          <div class="embed embed-4by3">
             <img class="embed-item img-flex" src="images/symbolism.svg" alt="Viewing rock gardens">
           </div>
           <h4 class="push-none">象徴主義</h4>
