--- a/index.html
+++ b/index.html
@@ -9,79 +9,83 @@
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
 
 </head>
 <body>
-  <main role="main">
-    <header role="banner" class="grid push pad-t-1-2 pad-b-2 grid-middle">
 
-      <div class="unit push unit-xs-content-center xs-1  l-1-3 unit-offset-l-0">
+  <ul class="skip-links">
+    <li> <a href="#nav">skip to navigation</a> </li>
+    <li> <a href="#main">skip to main content</a> </li>
+  </ul>
+  <header role="banner" class="grid push pad-t-1-2 pad-b grid-middle">
 
-          <h1 class="push-none zetta bold">枯山水</h1>
-          <h2 class="mega bold push-none">Rock Gardens</h2>
+    <div class="unit push unit-xs-content-center xs-1 l-1-3 unit-offset-l-0">
 
+      <h1 lang="ja" class="push-none zetta bold"><i class="normal bold" lang="ja">枯山水</i></h1>
+      <h2 class="kilo bold push-1-4">Rock Gardens</h2>
+
+    <nav role="navigation" id="nav" class="unit push-0 xs-1 unit-offset-l-1-3 l-1-3 text-center">
+
+      <ol class="list-group-inline push-1-2">
+        <li><a class="pad-b-1-4 push-r-1-2 mega" href="#">Viewing</a></li>
+        <li><a class="pad-b-1-4 push-r-1-2 mega" href="#">Gravel</a></li>
+        <li><a class="pad-b-1-4 mega" href="#">Symbolism</a></li>
+      </ol>
+    </nav>
+  </div>
+
+    <div class="unit pad-t-1-8">
+      <img role="presentation" class="img-flex" src="images/banner.svg" alt="">
+    </div>
+
+  </header>
+  <main role="main" id="main">
+    <article class="grid push-2 gutter">
+      <div class="unit xs-1 max-length">
+        <h3 class="push-1-2 text-center yotta not-bold pad-t"><i class="normal" lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></h3>
+        <p class="text-center gutter-2 mega">Imitate the intimate essence of nature & discover the true meaning of life.</p>
+      </div>
+    </article>
+
+    <section class="grid push pad-b">
+      <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
+        <div class="embed embed-3by2 push-1-4">
+          <img class="embed-item img-flex" src="images/viewing.svg" alt="Viewing rock gardens">
         </div>
+        <h4 class="push-none peta"><i class="normal bold" lang="ja">閲覧</i></h4>
+        <h5 class="push-1-4">Viewing</h5>
+        <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the <em>hojo</em></p>
+        <a class="btn btn-ghost" href="#">Learn more about Viewing</a>
+      </div>
 
-
-        <nav class="unit xs-1 unit-offset-l-1-3 l-1-3 text-center">
-
-          <ol class="list-group-inline">
-            <li><a class="pad-b-1-4 push-r-1-2 mega" href="#">Viewing</a></li>
-            <li><a class="pad-b-1-4 push-r-1-2 mega" href="#">Gravel</a></li>
-            <li><a class="pad-b-1-4 mega" href="#">Symbolism</a></li>
-          </ol>
-        </nav>
-
-        <div class="unit">
-          <img role="presentation" class="img-flex" src="images/banner.svg" alt="">
+      <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
+        <div class="embed embed-3by2 push-1-4">
+          <img class="embed-item img-flex" src="images/gravel.svg" alt="gravel gardens">
         </div>
+        <h4 lang="ja" class="push-none peta"><i class="normal bold" lang="ja">砂利</i></h4>
+        <h5 class="push-1-4">Gravel</h5>
+        <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
+        <a class="btn btn-ghost" href="#">Learn more about Gravel</a>
+      </div>
 
-      </header>
-
-      <article class="grid push">
-        <div class="unit xs-1 gutter max-length">
-          <h3 class="push-1-2 text-center yotta not-bold">自然の親密な本質を模倣し、人生の真の意味を発見する。</h3>
-          <p class="text-center gutter-2 mega">Imitate the intimate essence of nature & discover the true meaning of life.</p>
+      <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
+        <div class="embed embed-3by2 push-1-4">
+          <img class="embed-item img-flex" src="images/symbolism.svg" alt="Viewing rock gardens">
         </div>
-      </article>
+        <h4 lang="ja" class="push-none peta"><i class="normal bold" lang="ja">象徴主義</i></h4>
+        <h5 class="push-1-4">Symbolism</h5>
+        <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+        <a class="btn btn-ghost" href="#">Learn more about Symbolism</a>
+      </div>
+    </section>
 
-      <section class="grid push pad-b-2">
-        <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
-          <div class="embed embed-4by3">
-            <img class="embed-item img-flex" src="images/viewing.svg" alt="Viewing rock gardens">
-          </div>
-          <h4 class="push-none">閲覧</h4>
-          <h5>Viewing</h5>
-          <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the <em>hojo</em></p>
-          <a class="btn btn-ghost" href="#">Learn more about Viewing</a>
-        </div>
+    <footer class="gutter" role="contentinfo">
+      <p class="milli">© 794 Heian Period</p>
+    </footer>
+  </main>
+</body>
 
-        <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
-          <div class="embed embed-4by3">
-            <img class="embed-item img-flex" src="images/gravel.svg" alt="gravel gardens">
-          </div>
-          <h4 class="push-none">砂利</h4>
-          <h5>Gravel</h5>
-          <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
-          <a class="btn btn-ghost" href="#">Learn more about Gravel</a>
-        </div>
-
-        <div class="unit xs-1 s-1 m-1-2 l-1-3 gutter-1-2 push">
-          <div class="embed embed-4by3">
-            <img class="embed-item img-flex" src="images/symbolism.svg" alt="Viewing rock gardens">
-          </div>
-          <h4 class="push-none">象徴主義</h4>
-          <h5>Symbolism</h5>
-          <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
-          <a class="btn btn-ghost" href="#">Learn more about Symbolism</a>
-        </div>
-      </section>
-
-      <footer>
-        <p>© 794 Heian Period</p>
-      </footer>
-    </main>
-  </body>
-
-  </html>
+</html>
